crates/arteziac/tests/snapshots/lower__struct_out_of_order_construction.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"struct P { x: Int, y: Bool } func main() { let p = P { y: true, x: 1 }; }\")"
---
func main() -> Unit {
  local %0: struct#0 (p)
  bb0:
    v0 = const.int 1
    v1 = const.bool true
    v2 = struct.new #0 (v0, v1)
    store %0, v2
    v3 = const.unit
    return
}
