crates/arteziac/tests/snapshots/lower__struct_out_of_order_lit.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"struct Foo { b: Int, a: Int }\")"
---

