crates/arteziac/tests/snapshots/lower__while_break_then_dead_code.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(c: Bool) { while c { break; let x = 1; } }\")"
---
func main(%0) -> Unit {
  local %0: Bool (c)
  local %1: Int (x)
  bb0:
    jump bb1
  bb1:
    v0 = load %0
    branch v0 -> bb2, bb3
  bb2:
    jump bb3
  bb3:
    v2 = const.unit
    return
  bb4:
    v1 = const.int 1
    store %1, v1
    jump bb1
}
