crates/arteziac/tests/snapshots/lower__while_continue.snap
---
source: crates/arteziac/tests/lower.rs
expression: "check(\"func main(c: Bool) { while c { continue; } }\")"
---
func main(%0) -> Unit {
  local %0: Bool (c)
  bb0:
    jump bb1
  bb1:
    v0 = load %0
    branch v0 -> bb2, bb3
  bb2:
    jump bb1
  bb3:
    v1 = const.unit
    return
}
